--- a/NaoQt/NaoQt.vcxproj.filters
+++ b/NaoQt/NaoQt.vcxproj.filters
@@ -36,23 +36,32 @@
     <ClCompile Include="NaoQt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NaoDisasmView.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="NaoQt.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="NaoDisasmView.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
-    <QtUic Include="NaoQt.ui">
-      <Filter>Form Files</Filter>
-    </QtUic>
-  </ItemGroup>
-  <ItemGroup>
-    <QtRcc Include="NaoQt.qrc">
+    <ResourceCompile Include="NaoQt.rc">
       <Filter>Resource Files</Filter>
-    </QtRcc>
+    </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="NaoQt.rc" />
+    <ClInclude Include="Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="vdf_parser.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
