--- a/NaoQt/NaoQt.vcxproj
+++ b/NaoQt/NaoQt.vcxproj
@@ -127,6 +127,9 @@
     <ClInclude Include="Utils.h" />
     <ClInclude Include="vdf_parser.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <QtRcc Include="NaoQt.qrc" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
