--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
+ffmpeg/ linguist-vendored
+QtAV/ linguist-vendored
+Zydis/ linguist-vendored
+
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
