--- a/NaoQt/NaoQt.vcxproj
+++ b/NaoQt/NaoQt.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="AVOptionsDialog.cpp" />
     <ClCompile Include="ChunkBasedFile.cpp" />
     <ClCompile Include="BinaryUtils.cpp" />
+    <ClCompile Include="CPKReader.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="NaoQt.cpp" />
     <ClCompile Include="UTFReader.cpp" />
@@ -166,6 +167,7 @@
       <Define Condition="'$(Configuration)|$(Platform)'=='Release|x64'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_NO_DEBUG;NDEBUG;QT_3DCORE_LIB;QT_3DANIMATION_LIB;QT_3DEXTRAS_LIB;QT_3DINPUT_LIB;QT_3DLOGIC_LIB;QT_3DRENDER_LIB;QT_CONCURRENT_LIB;QT_CORE_LIB;QT_GUI_LIB;QT_OPENGL_LIB;QT_OPENGLEXTENSIONS_LIB;QT_SQL_LIB;QT_SVG_LIB;QT_WEBENGINE_LIB;QT_WEBENGINECORE_LIB;QT_WEBENGINEWIDGETS_LIB;QT_WIDGETS_LIB;QT_WINEXTRAS_LIB</Define>
     </QtMoc>
     <ClInclude Include="BinaryUtils.h" />
+    <ClInclude Include="CPKReader.h" />
     <ClInclude Include="Error.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="vdf_parser.hpp" />
