Prepare for rewrite

--- a/NaoQt/NaoQt.vcxproj
+++ b/NaoQt/NaoQt.vcxproj
@@ -123,7 +123,14 @@
     <ClCompile Include="ChunkBasedFile.cpp" />
     <ClCompile Include="BinaryUtils.cpp" />
     <ClCompile Include="CPKReader.cpp" />
+    <ClCompile Include="DATReader.cpp" />
+    <ClCompile Include="DirectoryEntity.cpp" />
+    <ClCompile Include="DiskFileDevice.cpp" />
+    <ClCompile Include="DiskFileEntity.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="NaoEntity.cpp" />
+    <ClCompile Include="NaoFileDevice.cpp" />
+    <ClCompile Include="NaoFSP.cpp" />
     <ClCompile Include="NaoQt.cpp" />
     <ClCompile Include="UTFReader.cpp" />
     <ClCompile Include="Utils.cpp" />
@@ -168,7 +175,19 @@
     </QtMoc>
     <ClInclude Include="BinaryUtils.h" />
     <ClInclude Include="CPKReader.h" />
+    <ClInclude Include="DATReader.h" />
+    <ClInclude Include="DirectoryEntity.h" />
+    <ClInclude Include="DiskFileDevice.h" />
+    <ClInclude Include="DiskFileEntity.h" />
     <ClInclude Include="Error.h" />
+    <ClInclude Include="NaoEntity.h" />
+    <ClInclude Include="NaoFileDevice.h" />
+    <QtMoc Include="NaoFSP.h">
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\Qt3DCore;$(QTDIR)\include\Qt3DAnimation;$(QTDIR)\include\Qt3DExtras;$(QTDIR)\include\Qt3DInput;$(QTDIR)\include\Qt3DLogic;$(QTDIR)\include\Qt3DRender;$(QTDIR)\include\QtConcurrent;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtOpenGL;$(QTDIR)\include\QtOpenGLExtensions;$(QTDIR)\include\QtSql;$(QTDIR)\include\QtSvg;$(QTDIR)\include\QtWebEngine;$(QTDIR)\include\QtWebEngineCore;$(QTDIR)\include\QtWebEngineWidgets;$(QTDIR)\include\QtWidgets;$(QTDIR)\include\QtWinExtras;$(SolutionDir)\Zydis\include;$(SolutionDir)\QtAV\include;$(SolutionDir)\ffmpeg\include;$(NOINHERIT)\.</IncludePath>
+      <Define Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_3DCORE_LIB;QT_3DANIMATION_LIB;QT_3DEXTRAS_LIB;QT_3DINPUT_LIB;QT_3DLOGIC_LIB;QT_3DRENDER_LIB;QT_CONCURRENT_LIB;QT_CORE_LIB;QT_GUI_LIB;QT_OPENGL_LIB;QT_OPENGLEXTENSIONS_LIB;QT_SQL_LIB;QT_SVG_LIB;QT_WEBENGINE_LIB;QT_WEBENGINECORE_LIB;QT_WEBENGINEWIDGETS_LIB;QT_WIDGETS_LIB;QT_WINEXTRAS_LIB</Define>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\Qt3DCore;$(QTDIR)\include\Qt3DAnimation;$(QTDIR)\include\Qt3DExtras;$(QTDIR)\include\Qt3DInput;$(QTDIR)\include\Qt3DLogic;$(QTDIR)\include\Qt3DRender;$(QTDIR)\include\QtConcurrent;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtOpenGL;$(QTDIR)\include\QtOpenGLExtensions;$(QTDIR)\include\QtSql;$(QTDIR)\include\QtSvg;$(QTDIR)\include\QtWebEngine;$(QTDIR)\include\QtWebEngineCore;$(QTDIR)\include\QtWebEngineWidgets;$(QTDIR)\include\QtWidgets;$(QTDIR)\include\QtWinExtras;$(SolutionDir)\Zydis\include;$(SolutionDir)\QtAV\include;$(SolutionDir)\ffmpeg\include;$(NOINHERIT)\.</IncludePath>
+      <Define Condition="'$(Configuration)|$(Platform)'=='Release|x64'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_NO_DEBUG;NDEBUG;QT_3DCORE_LIB;QT_3DANIMATION_LIB;QT_3DEXTRAS_LIB;QT_3DINPUT_LIB;QT_3DLOGIC_LIB;QT_3DRENDER_LIB;QT_CONCURRENT_LIB;QT_CORE_LIB;QT_GUI_LIB;QT_OPENGL_LIB;QT_OPENGLEXTENSIONS_LIB;QT_SQL_LIB;QT_SVG_LIB;QT_WEBENGINE_LIB;QT_WEBENGINECORE_LIB;QT_WEBENGINEWIDGETS_LIB;QT_WIDGETS_LIB;QT_WINEXTRAS_LIB</Define>
+    </QtMoc>
     <ClInclude Include="Utils.h" />
     <ClInclude Include="vdf_parser.hpp" />
     <QtMoc Include="USMDemuxer.h">
