--- a/NaoQt/NaoQt.vcxproj
+++ b/NaoQt/NaoQt.vcxproj
@@ -123,12 +123,15 @@
     <ClCompile Include="ChunkBasedFile.cpp" />
     <ClCompile Include="BinaryUtils.cpp" />
     <ClCompile Include="CPKArchiveEntity.cpp" />
+    <ClCompile Include="CPKDirectoryEntity.cpp" />
+    <ClCompile Include="CPKFileEntity.cpp" />
     <ClCompile Include="CPKReader.cpp" />
     <ClCompile Include="DATReader.cpp" />
     <ClCompile Include="DirectoryEntity.cpp" />
     <ClCompile Include="DiskFileDevice.cpp" />
     <ClCompile Include="DiskFileEntity.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="NaoArchiveEntity.cpp" />
     <ClCompile Include="NaoEntity.cpp" />
     <ClCompile Include="NaoFileDevice.cpp" />
     <ClCompile Include="NaoFSP.cpp" />
@@ -177,12 +180,15 @@
     </QtMoc>
     <ClInclude Include="BinaryUtils.h" />
     <ClInclude Include="CPKArchiveEntity.h" />
+    <ClInclude Include="CPKDirectoryEntity.h" />
+    <ClInclude Include="CPKFileEntity.h" />
     <ClInclude Include="CPKReader.h" />
     <ClInclude Include="DATReader.h" />
     <ClInclude Include="DirectoryEntity.h" />
     <ClInclude Include="DiskFileDevice.h" />
     <ClInclude Include="DiskFileEntity.h" />
     <ClInclude Include="Error.h" />
+    <ClInclude Include="NaoArchiveEntity.h" />
     <ClInclude Include="NaoEntity.h" />
     <ClInclude Include="NaoFileDevice.h" />
     <QtMoc Include="NaoFSP.h">
