--- a/NaoQt/NaoQt.vcxproj.filters
+++ b/NaoQt/NaoQt.vcxproj.filters
@@ -58,17 +58,11 @@
     <Filter Include="Source Files\Devices">
       <UniqueIdentifier>{1b82ca91-0b43-43d5-8132-2344a7e3d567}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Entities\CPK">
+    <Filter Include="Header Files\Entities\Archives">
       <UniqueIdentifier>{eaecc6ed-5747-4b78-8bc1-57f472674f74}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Entities\Filesystem">
-      <UniqueIdentifier>{e041464f-19ed-4a03-9aeb-0a0dd069bd85}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Entities\CPK">
+    <Filter Include="Source Files\Entities\Archives">
       <UniqueIdentifier>{4a4a3fa9-edb2-4e8c-ab7a-adf4817748c9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\Entities\Filesystem">
-      <UniqueIdentifier>{014e799b-b2ce-416b-8fc6-6e3918d24d92}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -102,9 +96,6 @@
     <ClCompile Include="AVOptionsDialog.cpp">
       <Filter>Source Files\Wrappers</Filter>
     </ClCompile>
-    <ClCompile Include="CPKReader.cpp">
-      <Filter>Source Files\Decoders</Filter>
-    </ClCompile>
     <ClCompile Include="DATReader.cpp">
       <Filter>Source Files\Decoders</Filter>
     </ClCompile>
@@ -123,26 +114,11 @@
     <ClCompile Include="PartialFileDevice.cpp">
       <Filter>Source Files\Devices</Filter>
     </ClCompile>
-    <ClCompile Include="NaoArchiveEntity.cpp">
-      <Filter>Source Files\Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="CPKArchiveEntity.cpp">
-      <Filter>Source Files\Entities\CPK</Filter>
-    </ClCompile>
-    <ClCompile Include="CPKDirectoryEntity.cpp">
-      <Filter>Source Files\Entities\CPK</Filter>
-    </ClCompile>
-    <ClCompile Include="CPKFileEntity.cpp">
-      <Filter>Source Files\Entities\CPK</Filter>
-    </ClCompile>
-    <ClCompile Include="DiskFileEntity.cpp">
-      <Filter>Source Files\Entities\Filesystem</Filter>
-    </ClCompile>
-    <ClCompile Include="DirectoryEntity.cpp">
-      <Filter>Source Files\Entities\Filesystem</Filter>
-    </ClCompile>
     <ClCompile Include="DATArchiveEntity.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Entities\Archives</Filter>
+    </ClCompile>
+    <ClCompile Include="CPKReader.cpp">
+      <Filter>Source Files\Entities\Archives</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -189,9 +165,6 @@
     <ClInclude Include="Error.h">
       <Filter>Header Files\Utils</Filter>
     </ClInclude>
-    <ClInclude Include="CPKReader.h">
-      <Filter>Header Files\Decoders</Filter>
-    </ClInclude>
     <ClInclude Include="DATReader.h">
       <Filter>Header Files\Decoders</Filter>
     </ClInclude>
@@ -207,26 +180,11 @@
     <ClInclude Include="PartialFileDevice.h">
       <Filter>Header Files\Devices</Filter>
     </ClInclude>
-    <ClInclude Include="NaoArchiveEntity.h">
-      <Filter>Header Files\Entities</Filter>
-    </ClInclude>
-    <ClInclude Include="CPKArchiveEntity.h">
-      <Filter>Header Files\Entities\CPK</Filter>
-    </ClInclude>
-    <ClInclude Include="CPKDirectoryEntity.h">
-      <Filter>Header Files\Entities\CPK</Filter>
-    </ClInclude>
-    <ClInclude Include="CPKFileEntity.h">
-      <Filter>Header Files\Entities\CPK</Filter>
-    </ClInclude>
-    <ClInclude Include="DirectoryEntity.h">
-      <Filter>Header Files\Entities\Filesystem</Filter>
-    </ClInclude>
-    <ClInclude Include="DiskFileEntity.h">
-      <Filter>Header Files\Entities\Filesystem</Filter>
-    </ClInclude>
     <ClInclude Include="DATArchiveEntity.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Entities\Archives</Filter>
+    </ClInclude>
+    <ClInclude Include="CPKReader.h">
+      <Filter>Header Files\Entities\Archives</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
